--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background2">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +15,7 @@
         android:padding="16dp">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/edit_email"
+            android:id="@+id/edit_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -22,15 +23,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:background="@color/white"
                 android:gravity="left"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
+                android:hint="Username"
+                android:inputType="text"
                 android:padding="10dp"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/edit_pwd"
+            android:id="@+id/edit_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true">
@@ -39,10 +39,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:background="@color/white"
                 android:gravity="left"
-                android:hint="Edit Password"
-                android:inputType="textPassword"
+                android:hint="Name"
+                android:inputType="text"
+                android:padding="10dp"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/edit_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:gravity="left"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
                 android:padding="10dp"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -56,7 +72,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:background="@color/white"
                 android:gravity="left"
                 android:hint="Phone Number"
                 android:inputType="phone"
@@ -70,7 +85,8 @@
             android:layout_margin="8dp"
             android:background="@color/red"
             android:padding="10dp"
-            android:text="UPDATE"
+            android:text="Update"
+            android:textAllCaps="false"
             android:textColor="@color/white"/>
     </LinearLayout>
 
