--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,20 +14,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:background="@color/red">
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:src="@drawable/logo_pertamina_go"/>
+                android:src="@drawable/icon1a"/>
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="@color/old_grey"/>
+            android:background="@color/grey"/>
 
         <LinearLayout
             android:id="@+id/balance"
@@ -78,23 +79,33 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="@color/old_grey"/>
+            android:background="@color/grey"/>
 
         <LinearLayout
             android:id="@+id/banner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"/>
+            <LinearLayout
+                android:id="@+id/layoutDots"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="@dimen/dots_margin_bottom"
+                android:gravity="center"
+                android:orientation="horizontal"/>
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="@color/old_grey"/>
+            android:background="@color/grey"/>
 
         <LinearLayout
             android:id="@+id/list_aplikasi_1"
@@ -104,40 +115,75 @@
             android:padding="10dp"
             android:weightSum="9">
 
-            <TextView
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="3"
-                android:text="LOGO 1"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:orientation="vertical"
+                android:layout_weight="3">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="6dp"
-                android:layout_weight="3"
-                android:gravity="center_vertical"
-                android:text="LOGO 2"
-                android:textColorHint="#E5E5E5"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/refuel_icon"
+                    android:layout_gravity="center"
+                    />
 
-            <TextView
-                android:layout_width="0dp"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="LOGO 1"
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="6dp"
-                android:layout_weight="3"
-                android:fontFamily="sans-serif"
-                android:gravity="left"
-                android:text="LOGO 3"
-                android:textColorHint="#E5E5E5"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:orientation="vertical"
+                android:layout_weight="3">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/refuel_icon"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="LOGO 2"
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="3">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/refuel_icon"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="LOGO 3"
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -148,40 +194,75 @@
             android:padding="10dp"
             android:weightSum="9">
 
-            <TextView
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="3"
-                android:text="LOGO 4"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:orientation="vertical"
+                android:layout_weight="3">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="6dp"
-                android:layout_weight="3"
-                android:gravity="center_vertical"
-                android:text="LOGO 5"
-                android:textColorHint="#E5E5E5"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/refuel_icon"
+                    android:layout_gravity="center"
+                    />
 
-            <TextView
-                android:layout_width="0dp"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="LOGO 1"
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="6dp"
-                android:layout_weight="3"
-                android:fontFamily="sans-serif"
-                android:gravity="left"
-                android:text="LOGO 6"
-                android:textColorHint="#E5E5E5"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:orientation="vertical"
+                android:layout_weight="3">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/refuel_icon"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="LOGO 2"
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="3">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/refuel_icon"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="LOGO 3"
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
         </LinearLayout>
 
         <View
