--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,17 +3,22 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="@color/grey"
+              android:background="@drawable/background2"
               android:fitsSystemWindows="true"
               android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="16dp">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/logo_pertamina_go"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/edit_email"
@@ -23,11 +28,10 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@color/white"
+                android:layout_margin="20dp"
                 android:gravity="left"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
+                android:hint="Username"
+                android:inputType="text"
                 android:padding="10dp"/>
         </android.support.design.widget.TextInputLayout>
 
@@ -43,8 +47,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@color/white"
+                android:layout_margin="20dp"
                 android:gravity="left"
                 android:hint="Password"
                 android:inputType="textPassword"
@@ -55,10 +58,11 @@
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="20dp"
             android:background="@color/red"
             android:padding="10dp"
-            android:text="LOGIN"
+            android:text="Log In"
+            android:textAllCaps="false"
             android:textColor="@color/white"/>
 
         <LinearLayout
@@ -69,15 +73,11 @@
             android:padding="16dp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Forgot your password? "/>
-
-            <TextView
                 android:id="@+id/text_get_help"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="GET HELP HERE"
+                android:text="Forget Password? "
+                android:textColor="@color/red"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -92,7 +92,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
-            android:background="@color/old_grey"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
@@ -100,15 +99,16 @@
                 android:id="@+id/text_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account ? "
-                android:textSize="18dp"/>
+                android:text="Don't have an account? "
+                android:textSize="15dp"/>
 
             <TextView
                 android:id="@+id/text_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="REGISTER HERE"
-                android:textSize="18dp"
+                android:text="Sign Up"
+                android:textColor="@color/red"
+                android:textSize="15dp"
                 android:textStyle="bold"/>
         </LinearLayout>
 
