--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -26,7 +26,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:background="@color/white"
                 android:gravity="left"
                 android:hint="Old Password"
                 android:inputType="textPassword"
@@ -47,9 +46,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:background="@color/white"
                 android:gravity="left"
                 android:hint="New Password"
+                android:inputType="textPassword"
+                android:padding="10dp"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/verify_new_pwd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            app:passwordToggleEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:gravity="left"
+                android:hint="Verify New Password"
                 android:inputType="textPassword"
                 android:padding="10dp"/>
         </android.support.design.widget.TextInputLayout>
@@ -61,7 +78,8 @@
             android:layout_margin="8dp"
             android:background="@color/red"
             android:padding="10dp"
-            android:text="UPDATE"
+            android:textAllCaps="false"
+            android:text="Update"
             android:textColor="@color/white"/>
     </LinearLayout>
 
