--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,7 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="@color/grey"
+              android:background="@drawable/background2"
               android:fitsSystemWindows="true"
               android:orientation="vertical">
 
@@ -23,10 +23,9 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@color/white"
+                android:layout_margin="20dp"
                 android:gravity="left"
-                android:hint="Name"
+                android:hint="Username"
                 android:inputType="text"
                 android:padding="10dp"/>
         </android.support.design.widget.TextInputLayout>
@@ -40,8 +39,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@color/white"
+                android:layout_margin="20dp"
                 android:gravity="left"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
@@ -56,8 +54,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@color/white"
+                android:layout_margin="20dp"
                 android:gravity="left"
                 android:hint="Phone Number"
                 android:inputType="phone"
@@ -76,8 +73,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@color/white"
+                android:layout_margin="20dp"
                 android:gravity="left"
                 android:hint="Password"
                 android:inputType="textPassword"
@@ -88,42 +84,35 @@
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="20dp"
             android:background="@color/red"
+            android:textAllCaps="false"
             android:padding="10dp"
-            android:text="REGISTER"
+            android:text="Sign Up"
             android:textColor="@color/white"/>
 
     </LinearLayout>
 
-    <RelativeLayout
+    <!--<RelativeLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:gravity="center_horizontal">-->
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/old_grey"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/text_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log In"
+            android:textSize="15dp"
+            android:textColor="@color/red"/>
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/text_account"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Already have an account ? "
-                android:textSize="18dp"/>
-
-            <TextView
-                android:id="@+id/text_login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="LOGIN HERE"
-                android:textSize="18dp"
-                android:textStyle="bold"/>
-        </LinearLayout>
-
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 </LinearLayout>
