--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,29 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/go_pertamina"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            android:background="@color/red">
 
-            <!--<ImageView-->
-                <!--android:layout_width="50dp"-->
-                <!--android:layout_height="50dp"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:layout_weight="1"-->
-                <!--android:src="@drawable/icon1a"/>-->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="History"
-                android:textColor="@color/white"
-                android:textSize="20dp"
-                android:gravity="center_horizontal"
-                android:textAlignment="center"/>
-        </LinearLayout>
 
         <!--<TextView-->
             <!--android:id="@+id/date"-->
@@ -68,21 +46,13 @@
                     android:textStyle="bold"/>
 
                 <TextView
+                    android:id="@+id/tgl"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_marginLeft="10dp"
                     android:text="18 June 2018"
                     android:textSize="15sp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="18:00"
-                    android:textSize="15sp"/>
-
 
             </LinearLayout>
 
@@ -94,39 +64,29 @@
                 android:layout_marginBottom="10dp">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="Pertamina Setiabudi"
-                    android:textSize="15sp"
-                    android:textStyle="bold"/>
-
-                <TextView
                     android:id="@+id/sta_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_marginLeft="10dp"
-                    android:text="Pertalite"
                     android:textSize="15sp"
                     android:textStyle="bold"/>
 
                 <TextView
+                    android:id="@+id/gas_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_marginLeft="10dp"
-                    android:text="5 lt"
                     android:textSize="15sp"
                     android:textStyle="bold"/>
 
                 <TextView
+                    android:id="@+id/amount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_marginLeft="10dp"
-                    android:text="90000"
                     android:textSize="15sp"
                     android:textStyle="bold"/>
 
@@ -139,96 +99,7 @@
             android:layout_height="3dp"
             android:background="@color/grey"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="8"
-            android:layout_marginTop="15dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="4"
-                android:layout_marginBottom="10dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="Refueling"
-                    android:textSize="15sp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="18 June 2018"
-                    android:textSize="15sp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="18:00"
-                    android:textSize="15sp"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="4"
-                android:layout_marginBottom="10dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="Pertamina Setiabudi"
-                    android:textSize="15sp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="Pertalite"
-                    android:textSize="15sp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="5 lt"
-                    android:textSize="15sp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
-                    android:text="90000"
-                    android:textSize="15sp"
-                    android:textStyle="bold"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <ImageButton
+      <!--  <ImageButton
             android:id="@+id/img_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -236,6 +107,6 @@
             android:layout_gravity="right"
             android:layout_alignParentBottom="true"/>
 
-        <include layout="@layout/tab_layout"/>
+        <include layout="@layout/tab_layout"/>-->
     </LinearLayout>
 </LinearLayout>
